--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 	<div class="intro text-center">
 		<p style="color:white">
-			This is a moving and delivery service that takes away the stress that serounds moving. Instead, this app brings peace of mind. <br>
-			<br> This was the goal of the project. To creat a tool for people with busy lives; to help them moves their stuff from point A to point B.
-			<br> My target audience are people on the move. Thoes between the ages of 18 and 40. Who are on their phones for most of the day. Who are moving in and out of university and apartments. Or, who are in an industry that requires them to move a lot of equpment to and from different location.
+			This is a moving and delivery service that takes away the added stress that surround moving. Instead, this app brings peace of mind. <br>
+			<br> This was the goal of the project. To create a tool for people with busy lives; to help them moves their stuff from point A to point B.
+			<br> My target audience are people on the move. Those between the ages of 18 and 40, who are on their phones regularly.<br> People who are moving in and out of university and apartments. Or, who are in an industry that requires them to move a lot of equipment to and from different location.
 		</p>
 	</div>
 
@@ -37,8 +37,8 @@
 
 	<div class="map">
 		<div class="text-center feeling" id="h3">
-			<h3>Experience Map</h3>
-			<h4>Thinking & Feeling</h4>
+			<h4>Experience Map</h4>
+			<h3>Thinking & Feeling</h3>
 		</div>
 		<div class="row">
 			<img src="imgs/map1.png" class="col-md-5">
