--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 
-	<div class="text-center site"><img src="imgs/sitem.png"></div>
+	<div class="text-center site"><img src="imgs/sitem.png" style="width: 90em;"></div>
 
 	<div class="intro text-center">
 		<p style="color:white">
@@ -57,8 +57,9 @@
 	<h2 class="text-center" style=" margin-bottom:30px">WireFrames</h2>
 	<div class="wireframe">
 	</div>
-	<div class="row text-center" id="screen">
-		<h3 id="h3" style="padding:8px;">The end result is a quick and easy tool, anyone could use</h2> <br><br>
+	<h3 class=" text-center" id="h3" style="padding:8px; font-size: x-large; margin-top:55px;">The end result is a quick and easy tool, anyone could use</h3> <br><br>
+	<!-- <div class="row text-center" id="screen">
+		<h3 id="h3" style="padding:8px;">The end result is a quick and easy tool, anyone could use</h3> <br><br>
 		<div class="col-md-4">
 			<h4 id="h3">Home screen</h4>
 			<img src="imgs/Screen1.png" style="width: 293px;">
@@ -78,14 +79,211 @@
 			<img src="imgs/Screen4.png" style="width: 293px;">
 		</div>
 		<div class="col-md-4">
-			<h4 id="h3">Quote screen</h4>
+			<h4 id="h3">Quote screen</h4> -->
 			<!-- <img src="imgs/Screen5.png" style="width: 146px;"> -->
-			<img src="imgs/Screen7.png" style="width: 293px;">
+			<!-- <img src="imgs/Screen7.png" style="width: 293px;">
 		</div>
 		<div class="col-md-4">
 			<h4 id="h3">Contact page and footer</h4>
 			<img src="imgs/Screen6.png" style="width: 293px;">
 		</div>
+	</div> -->
+	<div class="text-center clearfix phone">
+		<div class="hello">
+		<div id="navbar" class="hidden-md-up" style="padding: 0;width: inherit;">
+			<nav class="clearfix dropdown">
+	            <button class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="background: white;border: none;"> 
+	            	<a class="menu-icon pull-left">&#9776;</a> 
+	            </button>
+	            <img src="imgs/dna2.png" class="pull-right" style="padding-top: 11px; padding-right: 94px;">
+				<ul id="menu-link" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+					<li><a href="#quote">Email</a></li>
+					<br>
+					<li><a href="#city">Ad</a></li>
+					<br>
+					<li><a href="#zen">Google</a></li>
+					<li><img src="imgs/info.png"></li>
+				</ul> 
+			</nav>
+		</div>
+		</div>
+
+	<section>
+		<div class="welcome" id="banner" >
+			<div id="zen">
+				<h1 id="h1" style="padding-top: 18px;">Zen Garden</h1>
+
+				<div class="div world  col-xs-5">
+					<p>A moving and delivery service with peace of mind </p>
+						<!-- <a role="button" class="pop" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam." ><button type="button" id="but" class="btn btn-primary">Learn more</button></a> -->
+				</div>
+			</div>
+		</div>
+
+		<hr>
+		<div class="services text-center">
+			<h2 id="h2">Services</h2>
+			<p>If you are a photographer or artist with a lot of equipment <br> a student moving to or from school <br> or moving to a new home or office <br> we're here for you </p>
+			<p>You need to get rid of anything during your move, leave it with us and we'll donate it to charity </p>
+			<p> Zen Garden will bring you from point A to B with peace of mind </p>
+		</div>
+
+		<hr>
+		<div class="cites text-center" id="city">
+			<h2 class="text-center" id="h2">Cities</h2>
+
+			<div class="city">
+				<div class="ny"> <p class="sand">.</p> </div>
+				<h2 id="h2">New York</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="sf"> <p class="sand">.</p> </div>
+				<h2 id="h2">San Francisco</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="dc"> <p class="sand">.</p> </div>
+				<h2 id="h2">Washington D.C.</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="cgo"> <p class="sand">.</p> </div>
+				<h2 id="h2">Chicago</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="sle"> <p class="sand">.</p> </div>
+				<h2 id="h2">Seattle</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="bos"> <p class="sand">.</p> </div>
+				<h2 id="h2">Boston</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+			<hr>
+			<div class="city">
+				<div class="la"> <p class="sand">.</p> </div>
+				<h2 id="h2">Los Angeles</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			</div>
+
+		</div>
+
+		<hr>
+		<div class="contacts" id="contact">
+			<div id="quote">
+			<form class="form">
+				<h2 class="text-center" id="h2">Get A Quote</h2>
+				<div >
+					<div class="row">
+					    <div class="col-xs-2"> <h4 id="h4">Name </h4> </div>
+					    <div class="col-xs-10"> <input type="text" class="form-contro input" id="inputName3" placeholder="Name"> </div>
+				    </div>
+
+				    <div class="row">
+					    <div class="col-xs-2"> <h4 id="h4">Email </h4> </div> 
+					    <div class="col-xs-10"> <input type="text" class="form-contro input" id="inputEmail3" placeholder="Email"> </div>
+				    </div>
+
+				    <div class="row">
+				    	<div class="col-xs-2"> <h4 id="h4">City</h4> </div>
+						    <div class="col-xs-10">
+							    <div class="dropdown ">  
+						    	<button class="btn btn-default dropdown-toggle control" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							    ---
+							    <span class="caret"></span>
+							    </button> 
+							    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+								    <li><a >New York</a></li>
+								    <li><a >San Francisco</a></li>
+								    <li><a >DC</a></li>
+								    <li><a >Chicago</a></li>
+								    <li><a >Seattle</a></li>
+								    <li><a >Boston</a></li>
+								    <li><a >LA</a></li>
+							    </ul>
+						    </div>
+						</div>
+					</div>
+
+					<div class="row">
+					    <div class="col-xs-2"> <h4 id="h4">Zip</h4> </div>
+					    <div class="col-xs-10"> <input type="number" class="form-contro input" id="inputEmail3" placeholder="Zip Code"> </div>
+				    </div>
+				    <!-- <input type="subject" class="form-contro input" id="inputSubject3" placeholder="Subject"> -->
+				    <div class="row">
+				    	<div class="col-xs-2"> <h4 id="h4">Type</h4> </div>
+						    <div class="col-xs-10">
+							    <div class="dropdown">  
+						    	<button class="btn btn-default dropdown-toggle control" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							    ---
+							    <span class="caret"></span>
+							    </button> 
+							    <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
+								    <li><a >SUV</a></li>
+								    <li><a >VAN</a></li>
+								    <li><a >U-Haul</a></li>
+								    <li><a >bigger</a></li>
+							    </ul>
+						    </div>
+						</div>
+					</div>
+					<div class="row" id="myDropdown">
+				    	<div class="col-xs-2"> <h4 id="h4">Time</h4> </div>
+						    <div class="col-xs-10">
+							    <div class="dropdown">  
+							    	<button class="btn btn-default dropdown-toggle control" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								    ---
+								    <span class="caret"></span>
+								    </button> 
+								    <ul class="dropdown-menu" aria-labelledby="dropdownMenu4">
+									    <li><a>AM</a></li>
+									    <li><a>PM</a></li>
+								    </ul>
+							    </div>
+						</div>
+					</div>
+				    <div class="row">
+					    <div class="col-xs-2"> <h4 id="h4">Date</h4> </div>
+					    <div class="col-xs-10"> <input type="text" class="form-contro input" id="inputEmail3" name="birthdate" value="04/01/2017" > </div>
+				    </div>
+				    <div class="row">
+					    <div class="col-xs-2"> <h4 id="h4">Code </h4> </div>
+					    <div class="col-xs-10"> <input type="name" class="form-contro input" id="inputName3" placeholder="abc-def-ghi"> </div>
+				    </div>
+				    <!-- <div class="row">
+					    <div class="col-xs-2"> <h4>Message</h4> </div>
+					    <div class="col-xs-10"> <textarea class="form-contro input" rows="4" placeholder="message"></textarea> </div>
+				    </div> -->
+				    <a role="button" class="pop pull-right" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Thanks!" ><button type="button" id="but" class="btn btn-primary ">Submit</button></a>
+			    </div>
+			</form>
+			</div>
+		</div>
+
+		<hr>
+		<div class="contact text-center">
+			<div class="row contact">
+				<div>
+					<p>Contact</p>
+					<!-- <h5 class="white">Phone</h5> -->
+					<p>212-222-1234</p>
+					<!-- <h5 class="white">Email</h5> -->
+					<p>info@zengarden.com</p>
+					<!-- <h5 class="white">Connect</h5> -->
+					<p class="text-center">&copy; 2017 ZenGarden</p>
+				</div>
+			</div>	
+		</div>
+		<img src="imgs/footer.png" style="width: 100%;">
+	</section>
 	</div>
 
 
