added small style changes like font size and and photo size so more people can see it

--- a/index.html
+++ b/index.html
@@ -37,27 +37,28 @@
 
 	<div class="map">
 		<div class="text-center feeling" id="h3">
-			<h4>Experience Map</h4>
-			<h3>Thinking & Feeling</h3>
+			<h4 style="font-size:20px">Experience Map</h4>
+			<h3 style="font-size:30px">Thinking & Feeling</h3>
 		</div>
-		<div class="row">
-			<img src="imgs/map1.png" class="col-md-5">
-			<p class="col-md-7 faces">
+		<div class=" text-center">
+			<img src="imgs/map1.png" style="margin:20px;">
+			<p class=" faces" style="padding:60px;">
 				Using a new tools, makes people: <img src="imgs/indifferent.png" style="width: 50px;">
 				<br>Too many questions, makes people: <img src="imgs/annoyed.png" style="width: 50px;">
-				<br>Quick and easy, makes people: <img src="imgs/happy.png" style="width: 50px;"><br>
-				<br>The design of the app is very minimal. The simple, one, long page is designed to keep interest and avoiding any loops
+				<br>Quick and easy, makes people: <img src="imgs/happy.png" style="width: 50px;">
 			</p>
+			<p class=" faces">The design of the app is very minimal. The simple, one, long page is designed to keep interest and avoiding any loops</p>
+			
 		</div>
 		
 	</div>
 
 	<div class="wireframes">
 	</div>
-	<h2 class="text-center" style=" margin-bottom:30px">WireFrames</h2>
+	<h2 class="text-center" style="color:white; background:rgb(38,44,53); padding:50px; font-size: 35px;">WireFrames</h2>
 	<div class="wireframe">
 	</div>
-	<h3 class=" text-center" id="h3" style="padding:8px; font-size: x-large; margin-top:55px;">The end result is a quick and easy tool, anyone could use</h3> <br><br>
+	<h3 class=" text-center" id="h3" style="padding:8px; font-size: 35px; margin-top:55px;">The end result is a quick and easy tool, anyone could use</h3> <br><br>
 	<!-- <div class="row text-center" id="screen">
 		<h3 id="h3" style="padding:8px;">The end result is a quick and easy tool, anyone could use</h3> <br><br>
 		<div class="col-md-4">
@@ -90,7 +91,7 @@
 	</div> -->
 	<div class="text-center clearfix phone">
 		<div class="hello">
-		<div id="navbar" class="hidden-md-up" style="padding: 0;width: inherit;">
+		<div id="navbar" class="hidden-md-up" style="padding: 7px;width: inherit;">
 			<nav class="clearfix dropdown">
 	            <button class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="background: white;border: none;"> 
 	            	<a class="menu-icon pull-left">&#9776;</a> 
@@ -111,7 +112,7 @@
 	<section>
 		<div class="welcome" id="banner" >
 			<div id="zen">
-				<h1 id="h1" style="padding-top: 18px;">Zen Garden</h1>
+				<h1 id="h1" style="">Zen Garden</h1>
 
 				<div class="div world  col-xs-5">
 					<p>A moving and delivery service with peace of mind </p>
