--- a/index.html
+++ b/index.html
@@ -18,39 +18,44 @@
 	<div class="dnainfo" style="background-color:rgba(242,242,242,0.3)">
 		<div class="dna">
 			<h5 id="h3" style="padding:20px 0">The Challenge</h5>
-			<p>To create a tool for freelancers in a service backed by DNA info</p>
-			<p>DNA info is the leading neighborhood news source-covering entertainment, eduction, politocs, crime, sports and dining.<br> Zen Garden is my first feature of this service</p> 
+			<p id="pp">To create a tool for freelancers in a service backed by DNA info</p>
+			<p id="pp">DNA info is the leading neighborhood news source-covering entertainment, eduction, politocs, crime, sports and dining.<br> Zen Garden is my first feature of this service</p> 
 		</div>
 	</div>
 
 	<div class="text-center site"><img src="imgs/sitem.png" style="width: 90em;"></div>
 
-	<div class="intro text-center">
-		<p style="color:white">
+	<div class="intro">
+		<h5 id="h3" style="padding:20px 0">My Audience</h5>
+		<p style="color:white;" id="pp">
 			This is a moving and delivery service that takes away the added stress that surround moving. Instead, this app brings peace of mind. <br>
 			<br> This was the goal of the project. To create a tool for people with busy lives; to help them moves their stuff from point A to point B.
 			<br> My target audience are people on the move. Those between the ages of 18 and 40, who are on their phones regularly.<br> People who are moving in and out of university and apartments. Or, who are in an industry that requires them to move a lot of equipment to and from different location.
 		</p>
 	</div>
 
-	<div class="wirefr"></div>
+	<div class="wirefr"> <h4 class="pull-right" id="pp" style="padding:50px; font-size: 35px; background: rgba(212, 203, 190, 0.4);">With everything I wanted and though I needed, as seen in the site map, I made these frist wireframes. I learned that I didn't need most of what I originaly wanted. </h4> </div>
 
 	<div class="map">
 		<div class="text-center feeling" id="h3">
 			<h4 style="font-size:20px">Experience Map</h4>
 			<h3 style="font-size:30px">Thinking & Feeling</h3>
 		</div>
-		<div class=" text-center">
-			<img src="imgs/map1.png" style="margin:20px;">
-			<p class=" faces" style="padding:60px;">
+		<div class="row text-center" style="padding-top:55px;">
+			<img class="col-md-7" src="imgs/map1.png" style="margin-top:20px; padding-bottom:100px;">
+			<p class="col-md-5 faces" >
 				Using a new tools, makes people: <img src="imgs/indifferent.png" style="width: 50px;">
 				<br>Too many questions, makes people: <img src="imgs/annoyed.png" style="width: 50px;">
 				<br>Quick and easy, makes people: <img src="imgs/happy.png" style="width: 50px;">
 			</p>
-			<p class=" faces">The design of the app is very minimal. The simple, one, long page is designed to keep interest and avoiding any loops</p>
 			
 		</div>
 		
+	</div>
+
+	<hr style="padding-bottom:25px;">
+	<div class="text-center" style="padding: 190px 10px;">
+		<p id="pp">We learned the app needed to be very minimal.<br> The simple, one, long page is designed to keep interest and avoiding any loops</p>
 	</div>
 
 	<div class="wireframes">
