--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
 		</div>
 	</div>
 
-	<div class="text-center site"><img src="imgs/sitem.png" style="width: 90em;"></div>
+	<hr>
+	<div class="text-center site">
+		<h5 id="h3" style="padding:20px 0">SiteMap</h5>
+		<img src="imgs/sitem.png" style="width: 90em;">
+	</div>
 
 	<div class="intro">
 		<h5 id="h3" style="padding:20px 0">My Audience</h5>
 		<p style="color:white;" id="pp">
 			This is a moving and delivery service that takes away the added stress that surround moving. Instead, this app brings peace of mind. <br>
 			<br> This was the goal of the project. To create a tool for people with busy lives; to help them moves their stuff from point A to point B.
-			<br> My target audience are people on the move. Those between the ages of 18 and 40, who are on their phones regularly.<br> People who are moving in and out of university and apartments. Or, who are in an industry that requires them to move a lot of equipment to and from different location.
+			<br> My target audience are people on the move. Those between the ages of 18 and 40, who are on their phones regularly.<br> People who are moving in and out of university and apartments. Or, who are in an industry that requires them to move a lot of equipment to and from different location. <br> Also, if you just need to get rid of anything, leave it with us and we'll donate it to charity
 		</p>
 	</div>
 
-	<div class="wirefr"> <h4 class="pull-right" id="pp" style="padding:50px; font-size: 35px; background: rgba(212, 203, 190, 0.4);">With everything I wanted and though I needed, as seen in the site map, I made these frist wireframes. I learned that I didn't need most of what I originaly wanted. </h4> </div>
+	<div class="wirefr"> 
+		<h4 class="pull-right" id="pp" style="padding:50px; font-size: 35px; background: rgba(212, 203, 190, 0.4);">With everything I wanted and though I needed, as seen in the site map, I made these frist wireframes. I learned that I didn't need most of what I originaly wanted. </h4> 
+	</div>
 
 	<div class="map">
 		<div class="text-center feeling" id="h3">
@@ -55,7 +61,7 @@
 
 	<hr style="padding-bottom:25px;">
 	<div class="text-center" style="padding: 190px 10px;">
-		<p id="pp">We learned the app needed to be very minimal.<br> The simple, one, long page is designed to keep interest and avoiding any loops</p>
+		<p id="pp">I learned the app needed to be very minimal.<br> The simple, one, long page is designed to keep interest and avoiding any loops</p>
 	</div>
 
 	<div class="wireframes">
@@ -130,7 +136,7 @@
 		<div class="services text-center">
 			<h2 id="h2">Services</h2>
 			<p>If you are a photographer or artist with a lot of equipment <br> a student moving to or from school <br> or moving to a new home or office <br> we're here for you </p>
-			<p>You need to get rid of anything during your move, leave it with us and we'll donate it to charity </p>
+			<p>If you need to get rid of anything during your move, leave it with us and we'll donate it to charity </p>
 			<p> Zen Garden will bring you from point A to B with peace of mind </p>
 		</div>
 
